[gd_scene format=3 uid="uid://cs8ng15wu6v6e"]

[ext_resource type="Script" uid="uid://ctrn6o82pqwm4" path="res://Scripts/menú_principal.gd" id="1_tf4ic"]

[sub_resource type="LabelSettings" id="LabelSettings_csqe3"]
font_size = 64

[node name="MenúPrincipal" type="Control" unique_id=71079035]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tf4ic")

[node name="VBoxContainer" type="VBoxContainer" parent="." unique_id=187782141]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -50.5
offset_right = 40.0
offset_bottom = 50.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="Label" type="Label" parent="VBoxContainer" unique_id=500840459]
layout_mode = 2
text = "FALLA AL FALLO"
label_settings = SubResource("LabelSettings_csqe3")
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayButton" type="Button" parent="VBoxContainer" unique_id=1627495329]
layout_mode = 2
text = "Jugar"

[node name="OptionsButton" type="Button" parent="VBoxContainer" unique_id=1015501448]
layout_mode = 2
text = "Opciones"

[node name="QuitButton" type="Button" parent="VBoxContainer" unique_id=1864546777]
layout_mode = 2
text = "Salir"

[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
